--- a/style.css
+++ b/style.css
@@ -27,12 +27,6 @@ body {
     background-color: #fafafa;
 }
 
-#chapter-name, #question-number {
-    font-size: 16px;
-    color: #333;
-    margin-bottom: 10px;
-}
-
 #question {
     font-size: 18px;
     margin-bottom: 20px;
@@ -108,16 +102,23 @@ li button:hover {
 }
 
 @media (max-width: 480px) {
-    #chapter-select, #question-select, #nextButton, #previousButton, #shuffleQuestions, #shuffleChapters {
-        font-size: 14px;
+    #button-container {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+        padding: 10px;
+        background-color: #f4f4f4; /* same as body background color */
+        box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
     }
 
-    li button {
+    #nextButton, #previousButton, #shuffleQuestions, #shuffleChapters {
         font-size: 14px;
         padding: 6px 10px;
-    }
-
-    #feedback {
-        font-size: 14px;
+        width: 100%;
+        box-sizing: border-box;
     }
 }
